# log2ml_toolchain

./: .coverage  .gitignore  <stdout>  LICENSE  README.md  coverage.xml  requirements.txt  setup.py  test.sh  tokenizer.json  vectorizer_demo.sh
.github/workflows/: build.yml
core/: MANIFEST.in  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
core/log2ml/: __init__.py
core/log2ml/models/: __init__.py
core/log2ml/utils/: __init__.py  download_dataset.py  notebook_converter.py
core/log2ml/vectorizer/: __init__.py  vectorize_dataset.py  vectorizer.py
core/tests/: conftest.py
core/tests/unit/: test_vectorizer.py
gui/vector-analyzer/: index.html  package-lock.json  package.json
gui/vector-analyzer/src/: index.html  main.js  style.css
gui/vector-analyzer/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui/vector-analyzer/src-tauri/src/: main.rs  python_bridge.rs
notebooks/: LinFormer_AutoML_on_AE_sysmon_dataset_(Excel_implant_C2).ipynb  thesis_code.ipynb
scripts/: linter.sh  qa.sh  start_gui.sh  sysmon_vectorizer.sh  test.sh  vectorizer_demo.sh
tests/: conftest.py  test_vectorizer.py
tools/: __init__.py  download_dataset.py  vectorize_dataset.py  vectorizer  vectorizer.py
